--- a/index.html
+++ b/index.html
@@ -19,29 +19,33 @@
   		</div>
   	</div>
   	<!--Slide 2-->
-  	<div class="slide"></div>
+  	<div class="slide">
   	    <img src="images/sob.jpg" width="600" height="400">
   	    <div class="caption">
   	    	This is the School of Business.
   	    </div>
+	</div>
   	<!--Slide 3-->
-  	<div class="slide"></div>
+  	<div class="slide">
   	    <img src="images/cramton.jpg" width="600" height="400">
   	    <div class="caption">
   	    	This is the Cramton Auditorium.
   	    </div>
+  	</div>
   	<!--Slide 4-->
-  	<div class="slide"></div>
+  	<div class="slide">
   	    <img src="images/founders.jpg" width="600" height="400">
   	    <div class="caption">
   	    	This is Founders Library.
   	    </div>
+  	</div>
   	<!--Slide 5-->
-  	<div class="slide"></div>
+  	<div class="slide">
   	    <img src="images/bethune.jpg" width="600" height="400">
   	    <div class="caption">
   	    	This is the residential hall Bethune Annex. It houses all females.
   	    </div>
+  	</div>
   </div>
   <div class='buttons'>
   	<button type="button" class="previous">Previous</button>
